--- a/Javascript/JavaScript30-master/12 - Key Sequence Detection/index-START.html
+++ b/Javascript/JavaScript30-master/12 - Key Sequence Detection/index-START.html
@@ -3,10 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>Key Detection</title>
-  <script type="text/javascript" src="http://www.cornify.com/js/cornify.js"></script>
+  <!-- <script type="text/javascript" src="http://www.cornify.com/js/cornify.js"></script> -->
 </head>
 <body>
 <script>
+  const pressed = [];
+  const secretCode = 'didishas';
+
+  window.addEventListener('keyup', e => {
+  // console.log(e.key);
+  pressed.push(e.key);
+  pressed.splice(-secretCode.length - 1, pressed.length - secretCode.length);
+  if (pressed.join('') === secretCode) {
+    console.log(pressed.join(''))
+  }
+  });
 </script>
 </body>
 </html>
